compiler/tests-integration/testData/integration/smoke/compilationFailed/hello.compile.expected

ERR:
hello.kt:4:5: error: unresolved reference 'a'.
    a
    ^

Return code: 1
